[RED] Create test for validator