@@ -4,8 +4,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import id.ac.ui.cs.advprog.papikosbe.config.SecurityConfig;
 import id.ac.ui.cs.advprog.papikosbe.enums.BookingStatus;
 import id.ac.ui.cs.advprog.papikosbe.model.booking.Booking;
+import id.ac.ui.cs.advprog.papikosbe.model.kos.Kos;
 import id.ac.ui.cs.advprog.papikosbe.service.booking.BookingService;
+import id.ac.ui.cs.advprog.papikosbe.service.kos.KosService;
 import id.ac.ui.cs.advprog.papikosbe.security.JwtTokenProvider;
+import id.ac.ui.cs.advprog.papikosbe.util.AuthenticationUtils;
+import id.ac.ui.cs.advprog.papikosbe.validator.booking.BookingValidator;
+import id.ac.ui.cs.advprog.papikosbe.validator.booking.BookingAccessValidator;
 import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -18,6 +23,7 @@ import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDate;
@@ -27,13 +33,15 @@ import java.util.Optional;
 import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(BookingController.class)
-@Import(SecurityConfig.class)           // muat konfigurasi Security termasuk JwtFilter
-@AutoConfigureMockMvc                   // attach seluruh SecurityFilterChain
+@Import(SecurityConfig.class)
+@AutoConfigureMockMvc
+@WithMockUser
 class BookingControllerTest {
 
     @Autowired
@@ -43,12 +51,28 @@ class BookingControllerTest {
     private BookingService bookingService;
 
     @MockBean
+    private KosService kosService;
+
+    @MockBean
+    private BookingValidator stateValidator;
+
+    @MockBean
+    private BookingAccessValidator bookingAccessValidator;
+
+    @MockBean
+    private AuthenticationUtils authUtils;
+
+    @MockBean
     private JwtTokenProvider jwtProvider;
 
     @Autowired
     private ObjectMapper objectMapper;
 
     private Booking sample;
+    private Kos sampleKos;
+    private UUID userId;
+    private UUID ownerId;
+    private UUID kosId;
     private double monthlyPrice;
     private String fullName;
     private String phoneNumber;
@@ -59,12 +83,15 @@ class BookingControllerTest {
         monthlyPrice = 1500000.0;
         fullName = "John Doe";
         phoneNumber = "081234567890";
+        userId = UUID.randomUUID();
+        ownerId = UUID.randomUUID();
+        kosId = UUID.randomUUID();
 
-        // contoh booking with complete data
+        // Create sample booking with complete data
         sample = new Booking(
                 UUID.randomUUID(),
-                UUID.randomUUID(),
-                UUID.randomUUID(),
+                userId,
+                kosId,
                 LocalDate.now().plusDays(1),
                 2,
                 monthlyPrice,
@@ -73,16 +100,26 @@ class BookingControllerTest {
                 BookingStatus.PENDING_PAYMENT
         );
 
-        // stub JWT validasi & authentication untuk token "tok"
+        // Create sample kos
+        sampleKos = new Kos();
+        sampleKos.setId(kosId);
+        sampleKos.setOwnerId(ownerId);
+        sampleKos.setName("Test Kos");
+        sampleKos.setPrice(monthlyPrice);
+
+        // JWT validation stubs
         when(jwtProvider.validate("tok")).thenReturn(true);
         Authentication auth = new UsernamePasswordAuthenticationToken(
                 "user", null, List.of(new SimpleGrantedAuthority("ROLE_USER"))
         );
         when(jwtProvider.getAuthentication("tok")).thenReturn(auth);
+
+        // Authentication utils stubs
+        when(authUtils.getUserIdFromAuth(any())).thenReturn(userId);
     }
 
     @Test
-    void createBooking_returnsCreated() throws Exception {
+    void createBooking_returnsOk() throws Exception {
         when(bookingService.createBooking(any()))
                 .thenReturn(sample);
 
@@ -90,7 +127,7 @@ class BookingControllerTest {
                         .header("Authorization", "Bearer tok")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sample)))
-                .andExpect(status().isCreated())
+                .andExpect(status().isOk())
                 .andExpect(jsonPath("$.bookingId").value(sample.getBookingId().toString()))
                 .andExpect(jsonPath("$.status").value("PENDING_PAYMENT"))
                 .andExpect(jsonPath("$.fullName").value(fullName))
@@ -113,6 +150,10 @@ class BookingControllerTest {
     void getBookingById_found() throws Exception {
         when(bookingService.findBookingById(sample.getBookingId()))
                 .thenReturn(Optional.of(sample));
+        when(kosService.getKosById(sample.getKosId())).thenReturn(Optional.of(sampleKos));
+
+        // Allow access for this user
+        doNothing().when(bookingAccessValidator).validateUserAccess(userId, userId);
 
         mockMvc.perform(get("/api/bookings/{id}", sample.getBookingId())
                         .header("Authorization", "Bearer tok"))
@@ -132,6 +173,36 @@ class BookingControllerTest {
     }
 
     @Test
+    void getBookingById_forbidden() throws Exception {
+        UUID differentUserId = UUID.randomUUID();
+        Booking otherUserBooking = new Booking(
+                UUID.randomUUID(),
+                differentUserId, // Different user
+                kosId,
+                LocalDate.now().plusDays(1),
+                2,
+                monthlyPrice,
+                fullName,
+                phoneNumber,
+                BookingStatus.PENDING_PAYMENT
+        );
+
+        when(bookingService.findBookingById(otherUserBooking.getBookingId()))
+                .thenReturn(Optional.of(otherUserBooking));
+        when(kosService.getKosById(otherUserBooking.getKosId())).thenReturn(Optional.of(sampleKos));
+
+        // Throw exception for access validation
+        doThrow(new IllegalStateException("Only the tenant who made the booking can perform this action"))
+                .when(bookingAccessValidator).validateUserAccess(userId, differentUserId);
+        doThrow(new IllegalStateException("Only the kos owner can perform this action"))
+                .when(bookingAccessValidator).validateOwnerAccess(ownerId, userId);
+
+        mockMvc.perform(get("/api/bookings/{id}", otherUserBooking.getBookingId())
+                        .header("Authorization", "Bearer tok"))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
     void cancelBooking_returnsNoContent() throws Exception {
         UUID id = sample.getBookingId();
         doNothing().when(bookingService).cancelBooking(id);
@@ -140,8 +211,6 @@ class BookingControllerTest {
                         .header("Authorization", "Bearer tok"))
                 .andExpect(status().isNoContent());
     }
-
-    // New tests for update functionality
 
     @Test
     void updateBooking_returnsOk() throws Exception {
@@ -157,6 +226,17 @@ class BookingControllerTest {
                 "089876543210", // new phone
                 BookingStatus.PENDING_PAYMENT
         );
+
+        // Mock the find call to get existing booking
+        when(bookingService.findBookingById(sample.getBookingId()))
+                .thenReturn(Optional.of(sample));
+
+        // Allow access for this user
+        doNothing().when(bookingAccessValidator).validateUserAccess(userId, userId);
+
+        // Mock findById after update
+        when(bookingService.findBookingById(updatedBooking.getBookingId()))
+                .thenReturn(Optional.of(updatedBooking));
 
         // Mock the service to accept the update
         doNothing().when(bookingService).updateBooking(any(Booking.class));
@@ -184,8 +264,26 @@ class BookingControllerTest {
 
     @Test
     void updateBooking_afterApproval_returnsForbidden() throws Exception {
-        // Mock service to throw exception when trying to update an approved booking
-        doThrow(new IllegalStateException("Cannot edit booking after it has been paid or cancelled"))
+        // Create approved booking
+        Booking approvedBooking = new Booking(
+                sample.getBookingId(),
+                sample.getUserId(),
+                sample.getKosId(),
+                sample.getCheckInDate(),
+                sample.getDuration(),
+                sample.getMonthlyPrice(),
+                sample.getFullName(),
+                sample.getPhoneNumber(),
+                BookingStatus.APPROVED
+        );
+
+        when(bookingService.findBookingById(sample.getBookingId()))
+                .thenReturn(Optional.of(approvedBooking));
+
+        doNothing().when(bookingAccessValidator).validateUserAccess(userId, userId);
+
+        // Throw exception when trying to update an approved booking
+        doThrow(new IllegalStateException("Cannot edit booking after it has been approved or cancelled"))
                 .when(bookingService).updateBooking(any(Booking.class));
 
         mockMvc.perform(put("/api/bookings/{id}", sample.getBookingId())
@@ -197,25 +295,13 @@ class BookingControllerTest {
 
     @Test
     void updateBooking_notFound_returnsNotFound() throws Exception {
-        // Mock service to throw EntityNotFoundException
-        doThrow(new EntityNotFoundException("Booking not found"))
-                .when(bookingService).updateBooking(any(Booking.class));
+        when(bookingService.findBookingById(sample.getBookingId()))
+                .thenReturn(Optional.empty());
 
         mockMvc.perform(put("/api/bookings/{id}", sample.getBookingId())
                         .header("Authorization", "Bearer tok")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(sample)))
-                .andExpect(status().isNotFound());
-    }
-    @Test
-    void payBooking_notFound_returnsNotFound() throws Exception {
-        // Mock service to throw EntityNotFoundException
-        UUID nonExistentId = UUID.randomUUID();
-        doThrow(new EntityNotFoundException("Booking not found"))
-                .when(bookingService).payBooking(eq(nonExistentId), any(UUID.class));
-
-        mockMvc.perform(post("/api/bookings/{id}/pay", nonExistentId)
-                        .header("Authorization", "Bearer tok"))
                 .andExpect(status().isNotFound());
     }
 
@@ -234,43 +320,48 @@ class BookingControllerTest {
                 BookingStatus.PAID // paid status
         );
 
-        // Mock the service methods - now passing user ID
-        doNothing().when(bookingService).payBooking(eq(sample.getBookingId()), any(UUID.class));
-        when(bookingService.findBookingById(sample.getBookingId())).thenReturn(Optional.of(paidBooking));
+        // Mock service method calls
+        when(bookingService.findBookingById(sample.getBookingId()))
+                .thenReturn(Optional.of(sample), Optional.of(paidBooking));
+
+        // Allow access for this user
+        doNothing().when(bookingAccessValidator).validateUserAccess(userId, userId);
+        doNothing().when(bookingService).payBooking(sample.getBookingId());
 
         mockMvc.perform(post("/api/bookings/{id}/pay", sample.getBookingId())
                         .header("Authorization", "Bearer tok"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.status").value("PAID"));
-
-        // Verify service method was called with correct parameters
-        verify(bookingService).payBooking(eq(sample.getBookingId()), any(UUID.class));
-    }
-    @Test
-    void payBooking_wrongUser_returnsForbidden() throws Exception {
-        // Mock service to throw IllegalStateException for wrong user
-        doThrow(new IllegalStateException("Only the tenant who made the booking can pay for it"))
-                .when(bookingService).payBooking(eq(sample.getBookingId()), any(UUID.class));
-
-        mockMvc.perform(post("/api/bookings/{id}/pay", sample.getBookingId())
-                        .header("Authorization", "Bearer tok"))
-                .andExpect(status().isForbidden());
     }
 
     @Test
-    void payBooking_invalidTransition_returnsForbidden() throws Exception {
-        // Mock service to throw IllegalStateException for invalid transition
-        doThrow(new IllegalStateException("Only bookings in PENDING_PAYMENT status can be paid"))
-                .when(bookingService).payBooking(eq(sample.getBookingId()), any(UUID.class));
+    void payBooking_notFound_returnsNotFound() throws Exception {
+        // Non-existent booking ID
+        UUID nonExistentId = UUID.randomUUID();
+        when(bookingService.findBookingById(nonExistentId))
+                .thenReturn(Optional.empty());
 
-        mockMvc.perform(post("/api/bookings/{id}/pay", sample.getBookingId())
+        mockMvc.perform(post("/api/bookings/{id}/pay", nonExistentId)
                         .header("Authorization", "Bearer tok"))
-                .andExpect(status().isForbidden());
+                .andExpect(status().isNotFound());
     }
 
     @Test
     void approveBooking_returnsOk() throws Exception {
-        // Setup: Create a booking with updated status
+        // Setup: Create paid booking
+        Booking paidBooking = new Booking(
+                sample.getBookingId(),
+                sample.getUserId(),
+                sample.getKosId(),
+                sample.getCheckInDate(),
+                sample.getDuration(),
+                sample.getMonthlyPrice(),
+                sample.getFullName(),
+                sample.getPhoneNumber(),
+                BookingStatus.PAID
+        );
+
+        // Setup: Create approved booking (after approval)
         Booking approvedBooking = new Booking(
                 sample.getBookingId(),
                 sample.getUserId(),
@@ -283,57 +374,29 @@ class BookingControllerTest {
                 BookingStatus.APPROVED
         );
 
-        // Mock the service methods - now passing owner ID
-        doNothing().when(bookingService).approveBooking(eq(sample.getBookingId()), any(UUID.class));
-        when(bookingService.findBookingById(sample.getBookingId())).thenReturn(Optional.of(approvedBooking));
+        // Mock kos retrieval
+        when(kosService.getKosById(kosId)).thenReturn(Optional.of(sampleKos));
+
+        // Mock booking retrieval (before and after approval)
+        when(bookingService.findBookingById(sample.getBookingId()))
+                .thenReturn(Optional.of(paidBooking), Optional.of(approvedBooking));
+
+        // Override auth to return owner ID
+        when(authUtils.getUserIdFromAuth(any())).thenReturn(ownerId);
+
+        // Allow access for owner
+        doNothing().when(bookingAccessValidator).validateOwnerAccess(ownerId, ownerId);
+        doNothing().when(bookingService).approveBooking(sample.getBookingId());
 
         mockMvc.perform(post("/api/bookings/{id}/approve", sample.getBookingId())
                         .header("Authorization", "Bearer tok"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.status").value("APPROVED"));
-
-        verify(bookingService).approveBooking(eq(sample.getBookingId()), any(UUID.class));
-    }
-
-    @Test
-    void approveBooking_notFound_returnsNotFound() throws Exception {
-        // Mock service to throw EntityNotFoundException
-        UUID nonExistentId = UUID.randomUUID();
-        doThrow(new EntityNotFoundException("Booking not found"))
-                .when(bookingService).approveBooking(eq(nonExistentId), any(UUID.class));
-
-        mockMvc.perform(post("/api/bookings/{id}/approve", nonExistentId)
-                        .header("Authorization", "Bearer tok"))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void approveBooking_invalidTransition_returnsForbidden() throws Exception {
-        // Mock service to throw IllegalStateException for invalid transition
-        doThrow(new IllegalStateException("Only PAID bookings can be approved"))
-                .when(bookingService).approveBooking(eq(sample.getBookingId()), any(UUID.class));
-
-        mockMvc.perform(post("/api/bookings/{id}/approve", sample.getBookingId())
-                        .header("Authorization", "Bearer tok"))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void approveBooking_notOwner_returnsForbidden() throws Exception {
-        // Mock service to throw IllegalStateException when wrong owner tries to approve
-        doThrow(new IllegalStateException("Only the kos owner can approve this booking"))
-                .when(bookingService).approveBooking(eq(sample.getBookingId()), any(UUID.class));
-
-        mockMvc.perform(post("/api/bookings/{id}/approve", sample.getBookingId())
-                        .header("Authorization", "Bearer tok"))
-                .andExpect(status().isForbidden());
     }
 
     @Test
     void getBookingsByOwnerId_returnsList() throws Exception {
-        UUID ownerId = UUID.randomUUID();
-        List<Booking> ownerBookings = List.of(sample);
-
+        List<Booking> ownerBookings = Arrays.asList(sample);
         when(bookingService.findBookingsByOwnerId(ownerId))
                 .thenReturn(ownerBookings);
 
@@ -342,20 +405,5 @@ class BookingControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].bookingId").value(sample.getBookingId().toString()));
     }
-
-    @Test
-    void getBookingsByOwnerId_returnsEmptyList() throws Exception {
-        UUID ownerId = UUID.randomUUID();
-
-        when(bookingService.findBookingsByOwnerId(ownerId))
-                .thenReturn(List.of());
-
-        mockMvc.perform(get("/api/bookings/owner/{ownerId}", ownerId)
-                        .header("Authorization", "Bearer tok"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$").isEmpty());
-    }
-
 
 }
